--- a/Atlantis.Grpc.Simple.Client/Atlantis.Grpc.Simple.Client.csproj
+++ b/Atlantis.Grpc.Simple.Client/Atlantis.Grpc.Simple.Client.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.7.0" />
     <PackageReference Include="Grpc.Core" Version="1.19.0" />
   </ItemGroup>
 
