--- a/Atlantis.Grpc/Atlantis.Grpc.csproj
+++ b/Atlantis.Grpc/Atlantis.Grpc.csproj
@@ -2,15 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Atlantis.Common" Version="0.0.2" />
     <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="Grpc.Core" Version="1.19.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="protobuf-net" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\common\src\Atlantis.Common.csproj" />
   </ItemGroup>
 
 
