--- a/Kadder.Simple.Client/Kadder.Simple.Client.csproj
+++ b/Kadder.Simple.Client/Kadder.Simple.Client.csproj
@@ -1,12 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <None Remove="Atlantis.Grpc.Client.Services_dll" />
+    <None Remove="Kadder.Client.Services_dll" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kadder\Kadder.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.7.0" />
-    <PackageReference Include="Grpc.Core" Version="1.19.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.9.1" />
+    <PackageReference Include="Grpc.Core" Version="2.23.0" />
   </ItemGroup>
 
   <PropertyGroup>
