Add default result

--- a/Kadder.Simple.Client/Kadder.Simple.Client.csproj
+++ b/Kadder.Simple.Client/Kadder.Simple.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Kadder\Kadder.csproj" />
+    <ProjectReference Include="..\Kadder.Simple.Server\Kadder.Simple.Server.csproj" />	
   </ItemGroup>
 
   <ItemGroup>
