--- a/Kadder.Simple.Client/.vscode/launch.json
+++ b/Kadder.Simple.Client/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/Atlantis.Grpc.Simple.Client.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/Kadder.Simple.Client.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
