--- a/Kadder.Simple.Client/Kadder.Simple.Client.csproj
+++ b/Kadder.Simple.Client/Kadder.Simple.Client.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.9.1" />
     <PackageReference Include="Grpc.Core" Version="2.23.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
   </ItemGroup>
 
   <PropertyGroup>
