--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Atlantis.Common" Version="0.0.7" />
+    <PackageReference Include="GenAssembly" Version="1.0.1" />
     <PackageReference Include="Grpc.Core" Version="1.19.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
