--- a/Kadder.Simple.Client/Kadder.Simple.Client.csproj
+++ b/Kadder.Simple.Client/Kadder.Simple.Client.csproj
@@ -15,11 +15,12 @@
     <PackageReference Include="Grpc.Core" Version="2.33.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
 </Project>
