Update simple; Fix client

--- a/Kadder.Simple.Client/appsettings.json
+++ b/Kadder.Simple.Client/appsettings.json
@@ -3,10 +3,10 @@
         "ClientOptions": [
             {
                 "Name": "client",
-                // "PackageName": "Kadder.Simple.Client",
+                "PackageName": "Atlantis.Simple",
                 "Addresses": [
                     {
-                        "Address": "127.0.0.1:3004"
+                        "Address": "127.0.0.1:3001"
                     }
                 ],
                 "AssemblyNames": [
