--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.16</Version>
-    <PackageVersion>0.1.16</PackageVersion>
+    <Version>0.1.0-dev.2020.1.1</Version>
+    <PackageVersion>0.1.0-dev.2020.1.1</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
