--- a/Kadder.Simple.Client/appsettings.json
+++ b/Kadder.Simple.Client/appsettings.json
@@ -1,18 +1,18 @@
 {
-    "GrpcClient": {
-        "ClientOptions": [
-            {
-                "Name": "client",
-                "PackageName": "Atlantis.Simple",
-                "Addresses": [
-                    {
-                        "Address": "127.0.0.1:3001"
-                    }
-                ],
-                "AssemblyNames": [
-                    "Kadder.Simple.Server"
-                ]
-            }
-        ]
-    }
+    // "GrpcClient": {
+    //     "ClientOptions": [
+    //         {
+    //             "Name": "client",
+    //             "PackageName": "Atlantis.Simple",
+    //             "Addresses": [
+    //                 {
+    //                     "Address": "127.0.0.1:3001"
+    //                 }
+    //             ],
+    //             "AssemblyNames": [
+    //                 "Kadder.Simple.Server"
+    //             ]
+    //         }
+    //     ]
+    // }
 }
