--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.5-beta.21122901</Version>
-    <PackageVersion>1.0.5-beta.21122901</PackageVersion>
+    <Version>1.0.5</Version>
+    <PackageVersion>1.0.5</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
