--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.6</Version>
-    <PackageVersion>1.0.6</PackageVersion>
+    <Version>1.0.7-beta.22021701</Version>
+    <PackageVersion>1.0.7-beta.22021701</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
