--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.7-beta.22021801</Version>
-    <PackageVersion>1.0.7-beta.22021801</PackageVersion>
+    <Version>1.0.7-beta.22022102</Version>
+    <PackageVersion>1.0.7-beta.22022102</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <NoWarn>CS0618</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="GenAssembly" Version="1.0.5" />
-    <PackageReference Include="Grpc.Core" Version="2.33.1" />
+    <PackageReference Include="Grpc.Core" Version="2.44.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
