--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.7-beta.22022102</Version>
-    <PackageVersion>1.0.7-beta.22022102</PackageVersion>
+    <Version>1.0.7</Version>
+    <PackageVersion>1.0.7</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NoWarn>CS0618</NoWarn>
   </PropertyGroup>
@@ -11,11 +11,11 @@
   <ItemGroup>
     <PackageReference Include="GenAssembly" Version="1.0.5" />
     <PackageReference Include="Grpc.Core" Version="2.44.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="protobuf-net" Version="3.0.62" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="protobuf-net" Version="3.0.101" />
   </ItemGroup>
 
 </Project>
