--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Version>1.0.9</Version>
     <PackageVersion>1.0.9</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
