--- a/Kadder/Kadder.csproj
+++ b/Kadder/Kadder.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.9</Version>
-    <PackageVersion>1.0.9</PackageVersion>
+    <Version>1.0.14</Version>
+    <PackageVersion>1.0.14</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <LangVersion>12</LangVersion>
     <NoWarn>CS0618</NoWarn>
   </PropertyGroup>
 
